# pynecraft

./: 404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: publish.yml  tests.yml
devlogs/00_window_system/: index.html
devlogs/01_mesh_rendering/: index.html
devlogs/02_camera/: index.html
docs/: index.md
docs/devlogs/: 00_window_system.md  01_mesh_rendering.md  02_camera.md
docs/source/: camera.md  engine.md  parameters.md  player.md  scene.md  shader_program.md
docs/source/mesh/: base.md  quad.md
pynecraft/: camera.py  engine.py  parameters.py  player.py  scene.py  shader_program.py
pynecraft/mesh/: __init__.py  base.py  quad.py  triangle.py
search/: search_index.json
shaders/: fragment_shader.glsl  vertex_shader.glsl
source/camera/: index.html
source/engine/: index.html
source/mesh/base/: index.html
source/mesh/quad/: index.html
source/parameters/: index.html
source/player/: index.html
source/scene/: index.html
source/shader_program/: index.html
